[gd_scene load_steps=4 format=3 uid="uid://2n8tbm3osyqw"]

[ext_resource type="Script" uid="uid://ccin71kc3tnaf" path="res://esc_menu.gd" id="1_4yblc"]
[ext_resource type="FontFile" uid="uid://cygyhlf65bg51" path="res://assets/fonts/SFPRODISPLAYLIGHTITALIC.OTF" id="2_7ucxq"]

[sub_resource type="Theme" id="Theme_ljgwf"]
default_font = ExtResource("2_7ucxq")

[node name="Escape" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4yblc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.47451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 374.0
offset_top = 6.0
offset_right = 778.0
offset_bottom = 654.0
theme_override_constants/separation = 10
alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -195.5
offset_bottom = 195.5
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_ljgwf")
text = "E  - grab/drop
G - Flashlight
WASD - move
Space/C - Up/Down
LMB/RMB - Rotation
V - Drone Camera Toggle
Mouse btn4\\5 - camera up/down
B - Engine Toggle
N - Street Cam
F1 - Player Cam
TAB - next cam
Esc - Esc Menu
Alt+Q - new order "
tab_size = 5

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
